infrastructure/kubes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "laravel-example-service"
  namespace: "laravel-example"
spec:
  ports:
    - port: 8888
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "laravel-example-app"
