infrastructure/kubes/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "laravel-example-ingress"
  namespace: "laravel-example"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: laravel-example-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "laravel-example-service"
              servicePort: 8888
